--- a/baseline.yml
+++ b/baseline.yml
@@ -1,51 +1,62 @@
 ---
-- name: Post-register baseline (ISO-aware)
-  hosts: "{{ target_host }}"
+- name: Post-register baseline (ISO-aware, IP-based)
+  hosts: all              # IMPORTANT: do NOT limit here; we filter by IP inside
   gather_facts: yes
 
   vars:
     satellite_url: "https://satellite.lab.example.com"
-    satellite_api_user: "admin"       # dummy username - replace with your username OR use a credential
-    satellite_api_password: "redhat"  # dummy password - replace with vault/credential
+    satellite_api_user: "admin"        # dummy username - change to real user
+    satellite_api_password: "redhat"   # dummy password - change to real password or use a token
 
   tasks:
     - name: Show basic context as we see it from AAP
       debug:
         msg:
-          target_host: "{{ target_host }}"
           inventory_hostname: "{{ inventory_hostname }}"
+          ansible_ip: "{{ ansible_default_ipv4.address | default('UNKNOWN') }}"
+          target_ip: "{{ target_ip | default('UNDEFINED') }}"
+          target_name: "{{ target_name | default('UNDEFINED') }}"
 
-    ###########################################################################
-    # 1) Convert IP → FQDN using Satellite API
-    ###########################################################################
-    - name: Query Satellite API to find host FQDN by IP
+    # 1) Only the host whose IP == target_ip will continue;
+    #    all others end their execution here.
+    - name: Stop on all hosts except the one that just registered
+      meta: end_host
+      when: ansible_default_ipv4.address | default('') != target_ip | default('')
+
+    # From this point on, ONLY the matching host runs the tasks below.
+
+    # 2) Look up the Satellite host by IP (authoritative mapping)
+    - name: Lookup Satellite host by IP
       uri:
-        url: "{{ satellite_url }}/api/v2/hosts?search=ip={{ target_host }}"
+        url: "{{ satellite_url }}/api/v2/hosts?search=ip={{ target_ip }}"
         method: GET
         user: "{{ satellite_api_user }}"
         password: "{{ satellite_api_password }}"
         force_basic_auth: yes
-        validate_certs: no
+        validate_certs: no          # set to yes if CA trust is configured
         return_content: yes
       register: lookup_by_ip
 
-    - name: Validate that the host exists in Satellite for this IP
-      fail:
-        msg: "No host found in Satellite for IP {{ target_host }}"
-      when: lookup_by_ip.json.total == 0
-
-    - name: Set FQDN fact
+    - name: Extract Satellite FQDN from lookup
       set_fact:
-        sat_host_fqdn: "{{ lookup_by_ip.json.results[0].name }}"
+        sat_host_fqdn: >-
+          {{
+            lookup_by_ip.json.results[0].name
+            | default('')
+          }}
 
-    - name: Show the resolved FQDN
+    - name: Fail clearly if Satellite could not find the host by IP
+      fail:
+        msg: "Could not find Satellite host for IP {{ target_ip }} in /api/v2/hosts"
+      when: sat_host_fqdn == ''
+
+    - name: Show Satellite host FQDN we will use
       debug:
-        msg: "Satellite FQDN resolved from IP {{ target_host }} -> {{ sat_host_fqdn }}"
+        msg:
+          sat_host_fqdn: "{{ sat_host_fqdn }}"
 
-    ###########################################################################
-    # 2) Pull full host details using the FQDN
-    ###########################################################################
-    - name: Query Satellite API for full host details
+    # 3) Query host details from Satellite using the FQDN from the lookup
+    - name: Query Satellite API for host details
       uri:
         url: "{{ satellite_url }}/api/v2/hosts/{{ sat_host_fqdn }}"
         method: GET
@@ -56,10 +67,8 @@
         return_content: yes
       register: sat_host
 
-    ###########################################################################
-    # 3) Extract provision_source from Satellite all_parameters
-    ###########################################################################
-    - name: Extract provision_source from Satellite API
+    # 4) Pull provision_source from host parameters
+    - name: Extract provision_source from host parameters
       set_fact:
         provision_source: >-
           {{
@@ -70,24 +79,20 @@
             | default('')
           }}
 
-    - name: Show provision_source value
+    - name: Show provision_source value as seen from Satellite API
       debug:
         msg:
-          provision_source: "{{ provision_source }}"
+          provision_source: "{{ provision_source | default('UNDEFINED') }}"
 
-    ###########################################################################
-    # 4) ISO Filter
-    ###########################################################################
-    - name: Stop play if not an ISO host
-      meta: end_play
-      when: provision_source != "iso"
+    # 5) Skip baseline if not an ISO host
+    - name: Skip everything if this is not an ISO host
+      meta: end_host
+      when: provision_source | default('') != 'iso'
 
-    ###########################################################################
-    # 5) ISO Baseline Tasks
-    ###########################################################################
-    - name: Inform that ISO baseline WILL run
+    # 6) Baseline actions actually executed only on ISO hosts
+    - name: Inform that ISO baseline WILL run on this host
       debug:
-        msg: "ISO baseline WILL run on {{ inventory_hostname }} (provision_source={{ provision_source }})"
+        msg: "ISO baseline WILL run on {{ inventory_hostname }} (IP={{ ansible_default_ipv4.address }}, provision_source={{ provision_source }})"
 
     - name: Touch marker file to prove baseline ran
       file:
@@ -104,4 +109,6 @@
         dest: /root/baseline-role-ran.txt
         content: |
           Baseline role ran on {{ inventory_hostname }}
-          provision_source={{ provision_source }}
+          IP={{ ansible_default_ipv4.address | default('UNKNOWN') }}
+          Satellite host={{ sat_host_fqdn }}
+          provision_source={{ provision_source | default('UNDEFINED') }}
